--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.2.0",
     "card-validator": "^8.1.1",
     "classnames": "^2.3.2",
+    "date-fns": "^4.1.0",
     "flickity": "^2.3.0",
     "formik": "^2.2.9",
     "history": "^5.3.0",
@@ -22,6 +23,7 @@
     "react-flickity-component": "^4.0.7",
     "react-icons": "^4.7.1",
     "react-input-mask": "^2.0.4",
+    "react-player": "^2.16.0",
     "react-rating": "^2.0.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
