--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.1.8",
     "@mui/x-date-pickers": "^7.22.2",
     "@reduxjs/toolkit": "^1.8.5",
