Add creating "logs" folder for docker

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,7 +5,8 @@ FROM node:$VERSION
 ARG NODE_ENV="development"
 
 RUN mkdir /server \
-    && mkdir -p /public/images
+    && mkdir -p /public/images \
+    && mkdir -p /logs
 
 RUN mkdir -p /var/www/html/images 
 
