--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
-    "@mui/icons-material": "^6.3.1",
-    "@mui/material": "^6.1.8",
+    "@mui/base": "^5.0.0-beta.69",
     "@mui/x-date-pickers": "^7.24.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^1.2.0",
