Add some constants to .env file

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,10 @@
 PORT=
+ACCESS_TOKEN_TIME=
+SALT_ROUNDS=
+JWT_SECRET=
 NODEMAILER_AUTH_USER=
 NODEMAILER_AUTH_PASS=
+SQUADHELP_BANK_NUMBER=
+SQUADHELP_BANK_NAME=
+SQUADHELP_BANK_CVC=
+SQUADHELP_BANK_EXPIRY=
