--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^9.0.0",
     "express": "^4.16.3",
+    "express-query-parser": "^1.3.3",
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
