--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
     "card-validator": "^8.1.1",
     "classnames": "^2.3.2",
     "date-fns": "^4.1.0",
-    "flickity": "^2.3.0",
     "formik": "^2.2.9",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
@@ -23,7 +22,6 @@
     "react-confirm-alert": "^3.0.6",
     "react-credit-cards-2": "^1.0.1",
     "react-dom": "^18.2.0",
-    "react-flickity-component": "^4.0.7",
     "react-icons": "^4.7.1",
     "react-input-mask": "^2.0.4",
     "react-player": "^2.16.0",
@@ -36,6 +34,7 @@
     "redux": "^4.2.0",
     "require-context": "^1.1.0",
     "socket.io-client": "^4.5.4",
+    "swiper": "^11.2.10",
     "yup": "^0.32.11"
   },
   "scripts": {
