--- a/server/.env.example
+++ b/server/.env.example
@@ -1,10 +1,10 @@
-PORT=
-ACCESS_TOKEN_TIME=
-SALT_ROUNDS=
-JWT_SECRET=
-NODEMAILER_AUTH_USER=
-NODEMAILER_AUTH_PASS=
-SQUADHELP_BANK_NUMBER=
-SQUADHELP_BANK_NAME=
-SQUADHELP_BANK_CVC=
-SQUADHELP_BANK_EXPIRY=
+PORT=5000
+ACCESS_TOKEN_TIME=3600
+SALT_ROUNDS=5
+JWT_SECRET=asdasdasd4as5d4as8d7a8sd4as65d4a8sd7asd4as56d4
+NODEMAILER_AUTH_USER=artexbro.official@gmail.com
+NODEMAILER_AUTH_PASS=xiod doxc qbck xrms
+SQUADHELP_BANK_NUMBER=4564654564564564
+SQUADHELP_BANK_NAME=Squad
+SQUADHELP_BANK_CVC=453
+SQUADHELP_BANK_EXPIRY=11/26
