--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -16,6 +16,6 @@ EXPOSE 5000
 
 RUN npm install
 
-RUN chown -R node:node /client/node_modules
+# RUN chown -R node:node /client/node_modules
 
 CMD npm start
