--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.6.5",
     "multer": "^1.4.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.10.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
